[gd_scene load_steps=6 format=3 uid="uid://ug4cqscs1mdr"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_5mt8k"]
[ext_resource type="PackedScene" uid="uid://b7cvq3gfnkvmo" path="res://entities/sheep/sheep.blend" id="2_hfgkk"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_et56s"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_phvda"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_oxr6w"]
height = 1.2

[node name="Player" type="CharacterBody3D" groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_5mt8k")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_et56s")

[node name="StandingCollisionShape" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_phvda")

[node name="CrouchingCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.4, 0)
shape = SubResource("CapsuleShape3D_oxr6w")
disabled = true

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
target_position = Vector3(0, 2, 0)

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)

[node name="SheepModel" parent="Head" instance=ExtResource("2_hfgkk")]
unique_name_in_owner = true
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, -1.51507, -1.78937)
visible = false

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="DirectionRay" type="RayCast3D" parent="Head"]
target_position = Vector3(0, 0, -2)

[node name="SpawnPoint" type="Node3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="NavigationObstacle3D" type="NavigationObstacle3D" parent="."]
